{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 58,
  "lineage": "b6219f12-0ebb-6fd6-82e8-c257d0eddb12",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "lb_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/b5b6fdda-4ba6-4831-9aaa-4c63754f2653/resourceGroups/rg-project3-tf-dev/providers/Microsoft.Network/loadBalancers/lb-web-dev/frontendIPConfigurations/frontend-web",
                "load_balancer_rules": [
                  "/subscriptions/b5b6fdda-4ba6-4831-9aaa-4c63754f2653/resourceGroups/rg-project3-tf-dev/providers/Microsoft.Network/loadBalancers/lb-web-dev/loadBalancingRules/lbr-http"
                ],
                "name": "frontend-web",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/b5b6fdda-4ba6-4831-9aaa-4c63754f2653/resourceGroups/rg-project3-tf-dev/providers/Microsoft.Network/publicIPAddresses/pip-lb-web-dev"
              }
            ],
            "id": "/subscriptions/b5b6fdda-4ba6-4831-9aaa-4c63754f2653/resourceGroups/rg-project3-tf-dev/providers/Microsoft.Network/loadBalancers/lb-web-dev",
            "location": "eastus",
            "name": "lb-web-dev",
            "resource_group_name": "rg-project3-tf-dev",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.lb_pip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "bp_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b5b6fdda-4ba6-4831-9aaa-4c63754f2653/resourceGroups/rg-project3-tf-dev/providers/Microsoft.Network/loadBalancers/lb-web-dev/backendAddressPools/bp-web",
            "load_balancing_rules": [
              "/subscriptions/b5b6fdda-4ba6-4831-9aaa-4c63754f2653/resourceGroups/rg-project3-tf-dev/providers/Microsoft.Network/loadBalancers/lb-web-dev/loadBalancingRules/lbr-http"
            ],
            "loadbalancer_id": "/subscriptions/b5b6fdda-4ba6-4831-9aaa-4c63754f2653/resourceGroups/rg-project3-tf-dev/providers/Microsoft.Network/loadBalancers/lb-web-dev",
            "name": "bp-web"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.lb_web",
            "azurerm_public_ip.lb_pip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "hp_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b5b6fdda-4ba6-4831-9aaa-4c63754f2653/resourceGroups/rg-project3-tf-dev/providers/Microsoft.Network/loadBalancers/lb-web-dev/probes/hp-http",
            "interval_in_seconds": 15,
            "load_balancer_rules": [
              "/subscriptions/b5b6fdda-4ba6-4831-9aaa-4c63754f2653/resourceGroups/rg-project3-tf-dev/providers/Microsoft.Network/loadBalancers/lb-web-dev/loadBalancingRules/lbr-http"
            ],
            "loadbalancer_id": "/subscriptions/b5b6fdda-4ba6-4831-9aaa-4c63754f2653/resourceGroups/rg-project3-tf-dev/providers/Microsoft.Network/loadBalancers/lb-web-dev",
            "name": "hp-http",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.lb_web",
            "azurerm_public_ip.lb_pip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "lbr_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/b5b6fdda-4ba6-4831-9aaa-4c63754f2653/resourceGroups/rg-project3-tf-dev/providers/Microsoft.Network/loadBalancers/lb-web-dev/backendAddressPools/bp-web"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/b5b6fdda-4ba6-4831-9aaa-4c63754f2653/resourceGroups/rg-project3-tf-dev/providers/Microsoft.Network/loadBalancers/lb-web-dev/frontendIPConfigurations/frontend-web",
            "frontend_ip_configuration_name": "frontend-web",
            "frontend_port": 80,
            "id": "/subscriptions/b5b6fdda-4ba6-4831-9aaa-4c63754f2653/resourceGroups/rg-project3-tf-dev/providers/Microsoft.Network/loadBalancers/lb-web-dev/loadBalancingRules/lbr-http",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/b5b6fdda-4ba6-4831-9aaa-4c63754f2653/resourceGroups/rg-project3-tf-dev/providers/Microsoft.Network/loadBalancers/lb-web-dev",
            "name": "lbr-http",
            "probe_id": "/subscriptions/b5b6fdda-4ba6-4831-9aaa-4c63754f2653/resourceGroups/rg-project3-tf-dev/providers/Microsoft.Network/loadBalancers/lb-web-dev/probes/hp-http",
            "protocol": "Tcp"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.lb_web",
            "azurerm_lb_backend_address_pool.bp_web",
            "azurerm_lb_probe.hp_http",
            "azurerm_public_ip.lb_pip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_nat_gateway",
      "name": "natgw_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b5b6fdda-4ba6-4831-9aaa-4c63754f2653/resourceGroups/rg-project3-tf-dev/providers/Microsoft.Network/natGateways/natgw-web-dev",
            "idle_timeout_in_minutes": 4,
            "location": "eastus",
            "name": "natgw-web-dev",
            "resource_group_name": "rg-project3-tf-dev",
            "resource_guid": "7e144cfb-f4c9-4e74-baf3-6a408576b7bc",
            "sku_name": "Standard"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_nat_gateway_public_ip_association",
      "name": "natgw_pip_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b5b6fdda-4ba6-4831-9aaa-4c63754f2653/resourceGroups/rg-project3-tf-dev/providers/Microsoft.Network/natGateways/natgw-web-dev|/subscriptions/b5b6fdda-4ba6-4831-9aaa-4c63754f2653/resourceGroups/rg-project3-tf-dev/providers/Microsoft.Network/publicIPAddresses/pip-natgw-web-dev",
            "nat_gateway_id": "/subscriptions/b5b6fdda-4ba6-4831-9aaa-4c63754f2653/resourceGroups/rg-project3-tf-dev/providers/Microsoft.Network/natGateways/natgw-web-dev",
            "public_ip_address_id": "/subscriptions/b5b6fdda-4ba6-4831-9aaa-4c63754f2653/resourceGroups/rg-project3-tf-dev/providers/Microsoft.Network/publicIPAddresses/pip-natgw-web-dev"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_nat_gateway.natgw_web",
            "azurerm_public_ip.natgw_pip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "data_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/b5b6fdda-4ba6-4831-9aaa-4c63754f2653/resourceGroups/rg-project3-tf-dev/providers/Microsoft.Network/networkInterfaces/vm-data-dev-nic",
            "internal_domain_name_suffix": "v4xvpjk4mvkuhailvovgdaxoih.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/b5b6fdda-4ba6-4831-9aaa-4c63754f2653/resourceGroups/rg-project3-tf-dev/providers/Microsoft.Network/virtualNetworks/vnet-dev/subnets/data-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "mac_address": "00-0D-3A-9D-D3-25",
            "name": "vm-data-dev-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "rg-project3-tf-dev",
            "virtual_machine_id": "/subscriptions/b5b6fdda-4ba6-4831-9aaa-4c63754f2653/resourceGroups/rg-project3-tf-dev/providers/Microsoft.Compute/virtualMachines/vm-data-dev"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.data",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web2_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/b5b6fdda-4ba6-4831-9aaa-4c63754f2653/resourceGroups/rg-project3-tf-dev/providers/Microsoft.Network/networkInterfaces/vm-web2-dev-nic",
            "internal_domain_name_suffix": "v4xvpjk4mvkuhailvovgdaxoih.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/b5b6fdda-4ba6-4831-9aaa-4c63754f2653/resourceGroups/rg-project3-tf-dev/providers/Microsoft.Network/virtualNetworks/vnet-dev/subnets/web-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "vm-web2-dev-nic",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "rg-project3-tf-dev"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.web",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/b5b6fdda-4ba6-4831-9aaa-4c63754f2653/resourceGroups/rg-project3-tf-dev/providers/Microsoft.Network/networkInterfaces/vm-web-dev-nic",
            "internal_domain_name_suffix": "v4xvpjk4mvkuhailvovgdaxoih.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/b5b6fdda-4ba6-4831-9aaa-4c63754f2653/resourceGroups/rg-project3-tf-dev/providers/Microsoft.Network/publicIPAddresses/vm-web-dev-pip",
                "subnet_id": "/subscriptions/b5b6fdda-4ba6-4831-9aaa-4c63754f2653/resourceGroups/rg-project3-tf-dev/providers/Microsoft.Network/virtualNetworks/vnet-dev/subnets/web-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "mac_address": "00-22-48-25-23-64",
            "name": "vm-web-dev-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "rg-project3-tf-dev",
            "virtual_machine_id": "/subscriptions/b5b6fdda-4ba6-4831-9aaa-4c63754f2653/resourceGroups/rg-project3-tf-dev/providers/Microsoft.Compute/virtualMachines/vm-web-dev"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.web_pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.web",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "web2_nic_bp_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/b5b6fdda-4ba6-4831-9aaa-4c63754f2653/resourceGroups/rg-project3-tf-dev/providers/Microsoft.Network/loadBalancers/lb-web-dev/backendAddressPools/bp-web",
            "id": "/subscriptions/b5b6fdda-4ba6-4831-9aaa-4c63754f2653/resourceGroups/rg-project3-tf-dev/providers/Microsoft.Network/networkInterfaces/vm-web2-dev-nic/ipConfigurations/ipconfig1|/subscriptions/b5b6fdda-4ba6-4831-9aaa-4c63754f2653/resourceGroups/rg-project3-tf-dev/providers/Microsoft.Network/loadBalancers/lb-web-dev/backendAddressPools/bp-web",
            "ip_configuration_name": "ipconfig1",
            "network_interface_id": "/subscriptions/b5b6fdda-4ba6-4831-9aaa-4c63754f2653/resourceGroups/rg-project3-tf-dev/providers/Microsoft.Network/networkInterfaces/vm-web2-dev-nic"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.lb_web",
            "azurerm_lb_backend_address_pool.bp_web",
            "azurerm_network_interface.web2_nic",
            "azurerm_public_ip.lb_pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.web",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b5b6fdda-4ba6-4831-9aaa-4c63754f2653/resourceGroups/rg-project3-tf-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-data",
            "location": "eastus",
            "name": "nsg-data",
            "resource_group_name": "rg-project3-tf-dev",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-SSH-From-Web-Only",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-From-Web-Only",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Deny-All-Inbound",
                "priority": 4096,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b5b6fdda-4ba6-4831-9aaa-4c63754f2653/resourceGroups/rg-project3-tf-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-web",
            "location": "eastus",
            "name": "nsg-web",
            "resource_group_name": "rg-project3-tf-dev",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-SSH",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-HTTP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "lb_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/b5b6fdda-4ba6-4831-9aaa-4c63754f2653/resourceGroups/rg-project3-tf-dev/providers/Microsoft.Network/publicIPAddresses/pip-lb-web-dev",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.121.186.183",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "pip-lb-web-dev",
            "resource_group_name": "rg-project3-tf-dev",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "natgw_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/b5b6fdda-4ba6-4831-9aaa-4c63754f2653/resourceGroups/rg-project3-tf-dev/providers/Microsoft.Network/publicIPAddresses/pip-natgw-web-dev",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.68.247.46",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "pip-natgw-web-dev",
            "resource_group_name": "rg-project3-tf-dev",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/b5b6fdda-4ba6-4831-9aaa-4c63754f2653/resourceGroups/rg-project3-tf-dev/providers/Microsoft.Network/publicIPAddresses/vm-web-dev-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.82.151.252",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "vm-web-dev-pip",
            "resource_group_name": "rg-project3-tf-dev",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/b5b6fdda-4ba6-4831-9aaa-4c63754f2653/resourceGroups/rg-project3-tf-dev/providers/Microsoft.Network/virtualNetworks/vnet-dev/subnets/data-subnet",
            "name": "data-subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-project3-tf-dev",
            "virtual_network_name": "vnet-dev"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/b5b6fdda-4ba6-4831-9aaa-4c63754f2653/resourceGroups/rg-project3-tf-dev/providers/Microsoft.Network/virtualNetworks/vnet-dev/subnets/web-subnet",
            "name": "web-subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-project3-tf-dev",
            "virtual_network_name": "vnet-dev"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_nat_gateway_association",
      "name": "web_natgw_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b5b6fdda-4ba6-4831-9aaa-4c63754f2653/resourceGroups/rg-project3-tf-dev/providers/Microsoft.Network/virtualNetworks/vnet-dev/subnets/web-subnet",
            "nat_gateway_id": "/subscriptions/b5b6fdda-4ba6-4831-9aaa-4c63754f2653/resourceGroups/rg-project3-tf-dev/providers/Microsoft.Network/natGateways/natgw-web-dev",
            "subnet_id": "/subscriptions/b5b6fdda-4ba6-4831-9aaa-4c63754f2653/resourceGroups/rg-project3-tf-dev/providers/Microsoft.Network/virtualNetworks/vnet-dev/subnets/web-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_nat_gateway.natgw_web",
            "azurerm_resource_group.rg",
            "azurerm_subnet.web",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "data_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b5b6fdda-4ba6-4831-9aaa-4c63754f2653/resourceGroups/rg-project3-tf-dev/providers/Microsoft.Network/virtualNetworks/vnet-dev/subnets/data-subnet",
            "network_security_group_id": "/subscriptions/b5b6fdda-4ba6-4831-9aaa-4c63754f2653/resourceGroups/rg-project3-tf-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-data",
            "subnet_id": "/subscriptions/b5b6fdda-4ba6-4831-9aaa-4c63754f2653/resourceGroups/rg-project3-tf-dev/providers/Microsoft.Network/virtualNetworks/vnet-dev/subnets/data-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg_data",
            "azurerm_resource_group.rg",
            "azurerm_subnet.data",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "web_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b5b6fdda-4ba6-4831-9aaa-4c63754f2653/resourceGroups/rg-project3-tf-dev/providers/Microsoft.Network/virtualNetworks/vnet-dev/subnets/web-subnet",
            "network_security_group_id": "/subscriptions/b5b6fdda-4ba6-4831-9aaa-4c63754f2653/resourceGroups/rg-project3-tf-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-web",
            "subnet_id": "/subscriptions/b5b6fdda-4ba6-4831-9aaa-4c63754f2653/resourceGroups/rg-project3-tf-dev/providers/Microsoft.Network/virtualNetworks/vnet-dev/subnets/web-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg_web",
            "azurerm_resource_group.rg",
            "azurerm_subnet.web",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "a557afaf-655e-4355-810b-abaa6182ee47",
            "id": "/subscriptions/b5b6fdda-4ba6-4831-9aaa-4c63754f2653/resourceGroups/rg-project3-tf-dev/providers/Microsoft.Network/virtualNetworks/vnet-dev",
            "location": "eastus",
            "name": "vnet-dev",
            "resource_group_name": "rg-project3-tf-dev",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/b5b6fdda-4ba6-4831-9aaa-4c63754f2653/resourceGroups/rg-project3-tf-dev/providers/Microsoft.Network/virtualNetworks/vnet-dev/subnets/web-subnet",
                "name": "web-subnet",
                "security_group": "/subscriptions/b5b6fdda-4ba6-4831-9aaa-4c63754f2653/resourceGroups/rg-project3-tf-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-web"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/b5b6fdda-4ba6-4831-9aaa-4c63754f2653/resourceGroups/rg-project3-tf-dev/providers/Microsoft.Network/virtualNetworks/vnet-dev/subnets/data-subnet",
                "name": "data-subnet",
                "security_group": "/subscriptions/b5b6fdda-4ba6-4831-9aaa-4c63754f2653/resourceGroups/rg-project3-tf-dev/providers/Microsoft.Network/networkSecurityGroups/nsg-data"
              }
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}